[package]
name = "rust_relm_examples"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2018"

#[[bin]]
#name = "first_app"
#path = "src/first_app/main.rs"

[[bin]]
name = "counter"
path = "src/counter/main.rs"

[dependencies]
#relm4 = {version = "0.4.4", features = ["macros"] }
relm4 = { version = "*", features = ["macros"] }
relm4-components = { version = "*" }
