[package]
name = "rust_relm_examples"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2018"

[[bin]]
name = "first_app"
path = "src/first_app/main.rs"

[[bin]]
name = "counter"
path = "src/counter/main.rs"

[[bin]]
name = "euclidean"
path = "src/euclidean/main.rs"

[[bin]]
name = "pbkdf2_test"
path = "src/pbkdf2_test/main.rs"

[[bin]]
name = "sesam_psw_manager"
path = "src/sesam_psw_manager/main.rs"

[dependencies]
gtk4 = { version = "0.4.7", package = "gtk4" }
relm4 = {version = "0.4.4", features = ["macros"] }
relm4-components = { version = "*" }
pbkdf2 = "0.11"
rand_core = { version = "0.6.3", features = ["std"] }
